# TraqrPOSCLoud

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js
crates/cloud_api/: Cargo.toml
crates/cloud_api/src/: crypto.rs  main.rs  session.rs  state.rs
crates/cloud_api/src/delivery_connectors/: deliveroo.rs  just_eat.rs  mod.rs  uber_eats.rs
crates/cloud_api/src/routes/: admin_activation_keys.rs  auth_login.rs  billing.rs  delivery_webhooks.rs  device_activate.rs  mod.rs  portal_blogs.rs  portal_dashboard.rs  portal_docs.rs  portal_me.rs  portal_orders.rs  portal_orgs.rs  portal_store.rs  portal_super_admin.rs  sync_commands.rs  sync_events.rs  sync_menu.rs
crates/db/: Cargo.toml
crates/db/src/: auth.rs  blog.rs  delivery_integrations.rs  device.rs  docs.rs  entitlements.rs  lib.rs  orders.rs  profile.rs  read_model.rs  super_admin.rs  sync.rs  tenancy.rs  utils.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
docs/: API_CONTRACT.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DELIVERY_INTEGRATIONS_QA_REPORT.md  EVENT_READ_MODEL.md  HANDOVER_CHECKLIST.md  ITEM_IMAGES_SYNC_FROM_POS.md  PLAN_EARLE.md  POS_ITEM_IMAGE_PROMPT.md  POS_SYNC_MENU_PROMPT.md  READINESS_AUDIT_2026-02-06.md  SYNC_PROTOCOL.md  delivery_integrations.md  delivery_provider_api_references.md
migrations/: 001_extensions.sql  002_tenancy.sql  003_auth.sql  004_devices.sql  005_sync.sql  006_seed.sql  007_command_status.sql  008_orders_read_model.sql  009_entitlements.sql  010_demo_user.sql  011_read_model_menu.sql  012_cloud_sync_plan.sql  013_super_admin_seed.sql  014_devices_name_primary.sql  015_receipts_local_order_id.sql  016_super_admin_roles_and_profiles.sql  017_blogs.sql  018_seed_sa_owner.sql  019_sessions.sql  020_blog_images.sql  021_docs.sql  022_canonical_device_and_alerts.sql  023_delivery_integrations.sql
scripts/: README.md  create-activation-key.sh  create-admin-user.sql  fix-migration-5.sh  fix-migration-5.sql  set-password-traqr.sh  setup-db.sh  setup-db.sql
uploads/: .gitkeep
web/public/: blog.html  contact.html  dashboard.html  devices.html  docs.html  index.html  login.html  ops-commands.html  ops-devices.html  ops-menus.html  ops-orders.html  order.html  organizations.html  pricing.html  profile.html  signup.html  store.html  super-admin-customer.html  super-admin.html
web/src/: input.css
