[package]
name = "cloud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

domain = { path = "../domain" }
db = { path = "../db" }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
include_dir = "0.7"
mime_guess = "2.0"
dotenvy = "0.15"
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.21"
rand = "0.8"
hmac = "0.12"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
