[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono", "migrate"] }
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sha2 = "0.10"
